--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ AND LABELING OF CHANGES IN SCENES.</title>
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">GOLDILOCS - GENERAL OBJECT-LEVEL DETECTION
+          <h1 class="title is-1 publication-title">GOLDILOCS: GENERAL OBJECT-LEVEL DETECTION
 AND LABELING OF CHANGES IN SCENES.</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
@@ -98,7 +98,7 @@ AND LABELING OF CHANGES IN SCENES.</h1>
             <span class="author-block">
               <a href="https://utkarshsinha.com">Ariel Shamir</a><sup>2</sup>,</span>
             <span class="author-block">
-              <a href="https://jonbarron.info">Ohad Fried</a><sup>2</sup>,
+              <a href="https://jonbarron.info">Ohad Fried</a><sup>1</sup>,
             </span>
           </div>
 
