--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 AND LABELING OF CHANGES IN SCENES.">
   <meta name="keywords" content="SCD, Scene Change Detection">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>GOLDILOCS - GENERAL OBJECT-LEVEL DETECTION
-AND LABELING OF CHANGES IN SCENES.</title>
+  <title>GOLDILOCS: General Object-Level Detection
+& Labeling Of Changes In Scenes.</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
