--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="GOLDILOCS - GENERAL OBJECT-LEVEL DETECTION
-AND LABELING OF CHANGES IN SCENES.">
+        content="GOLDILOCS: General Object-Level Detection
+& Labeling Of Changes In Scenes">
   <meta name="keywords" content="SCD, Scene Change Detection">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>GOLDILOCS: General Object-Level Detection
