--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">GOLDILOCS: GENERAL OBJECT-LEVEL DETECTION
-AND LABELING OF CHANGES IN SCENES.</h1>
+          <h1 class="title is-1 publication-title">GOLDILOCS: General Object-Level Detection
+& Labeling Of Changes In Scenes</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://keunhong.com">Almog Friedlander</a><sup>1</sup>,</span>
