--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
 & Labeling Of Changes In Scenes</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://keunhong.com">Almog Friedlander</a><sup>1</sup>,</span>
+              <a href="https://www.linkedin.com/in/mogy/">Almog Friedlander</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="https://utkarshsinha.com">Ariel Shamir</a><sup>2</sup>,</span>
+              <a href="https://faculty.runi.ac.il/arik/site/index.asp">Ariel Shamir</a><sup>2</sup>,</span>
             <span class="author-block">
-              <a href="https://jonbarron.info">Ohad Fried</a><sup>1</sup>,
+              <a href="https://ohadf.com">Ohad Fried</a><sup>1</sup>,
             </span>
           </div>
 
@@ -127,16 +127,6 @@
                   <span>arXiv</span>
                 </a>
               </span>
-              <!-- Video Link. -->
-              <span class="link-block">
-                <a href="https://www.youtube.com/watch?v=MrKrnHhk8IA"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fab fa-youtube"></i>
-                  </span>
-                  <span>Video</span>
-                </a>
-              </span>
               <!-- Code Link. -->
               <span class="link-block">
                 <a href="https://github.com/google/nerfies"
@@ -147,15 +137,6 @@
                   <span>Code</span>
                   </a>
               </span>
-              <!-- Dataset Link. -->
-              <span class="link-block">
-                <a href="https://github.com/google/nerfies/releases/tag/0.1"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="far fa-images"></i>
-                  </span>
-                  <span>Data</span>
-                  </a>
             </div>
 
           </div>
