--- a/index.html
+++ b/index.html
@@ -110,14 +110,13 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <video id="teaser" autoplay muted loop playsinline height="100%">
-        <source src="./static/videos/teaser.mp4"
-                type="video/mp4">
-      </video>
+      <img src="./static/images/pipline_fig.pdf" 
+           alt="Nerfies Teaser Image" 
+           style="width:100%; height:auto;">
+           
       <h2 class="subtitle has-text-centered">
         <span class="dnerf">Nerfies</span> turns selfie videos from your phone into
-        free-viewpoint
-        portraits.
+        free-viewpoint portraits.
       </h2>
     </div>
   </div>
