--- a/index.html
+++ b/index.html
@@ -107,16 +107,14 @@
   </div>
 </section>
 
-<section class="hero teaser">
+<<section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <img src="./static/images/pipline_fig.pdf" 
-           alt="Nerfies Teaser Image" 
-           style="width:100%; height:auto;">
-           
+      <iframe src="./static/images/pipeline_fig.pdf" width="100%" height="500px">
+      </iframe>
+      
       <h2 class="subtitle has-text-centered">
-        <span class="dnerf">Nerfies</span> turns selfie videos from your phone into
-        free-viewpoint portraits.
+        ...
       </h2>
     </div>
   </div>
