--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
   </div>
 </section>
 
-<<section class="hero teaser">
+<section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
       <iframe src="./static/images/pipeline_fig.pdf" width="100%" height="500px">
