--- a/index.html
+++ b/index.html
@@ -110,11 +110,9 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <iframe src="./static/images/pipeline_fig.pdf" width="100%" height="500px">
-      </iframe>
-      
+      <img src="./static/images/pipeline_fig.png" alt="Change Detection Pipeline">
       <h2 class="subtitle has-text-centered">
-        ...
+        Our pipeline for <strong>rigid</strong> and <strong>non-rigid</strong> change detection.
       </h2>
     </div>
   </div>
