--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <span class="author-block">
               <a href="https://faculty.runi.ac.il/arik/site/index.asp">Ariel Shamir</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="https://ohadf.com">Ohad Fried</a><sup>1</sup>,
+              <a href="https://ohadf.com">Ohad Fried</a><sup>1</sup>
             </span>
           </div>
 
