--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <img src="./static/images/pipeline_fig.png" alt="Change Detection Pipeline">
       <h2 class="subtitle has-text-centered">
-        Our pipeline for <strong>rigid</strong> and <strong>non-rigid</strong> change detection.
+        GOLDILOCS reformulates scene change detection as a 3D reconstruction problem over time, where geometric inconsistencies naturally indicate change, demonstrate state-of-the-art binary and multi-class change detection under zero-shot conditions on both real-world image pairs and sets.
       </h2>
+      <img src="./static/images/pipeline_fig.png" alt="Change Detection Pipeline">
     </div>
   </div>
 </section>
