--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <div class="container is-max-desktop">
     <div class="hero-body">
       <h2 class="subtitle has-text-centered">
-        GOLDILOCS reformulates scene change detection as a 3D reconstruction problem over time where geometric inconsistencies naturally indicate change, and demonstrates state-of-the-art binary and multi-class change detection under zero-shot conditions on both real-world image pairs and sets.
+        GOLDILOCS reformulates scene change detection as a 3D reconstruction problem over time, a key insight that unlocks state-of-the-art binary and multi-class change detection under zero-shot conditions on both real-world image pairs and sets.
       </h2>
       <img src="./static/images/pipeline_fig.png" alt="Change Detection Pipeline">
     </div>
