--- a/index.html
+++ b/index.html
@@ -159,22 +159,22 @@
     <div id="results-carousel" class="carousel results-carousel">
       
       <div class="item item-layer4">
-        <img src="warped_0000_Layer-4.png" alt="Layer 4 Reconstruction">
+        <img src="./static/images/warped_0000_Layer-4.png" alt="Layer 4 Reconstruction">
         <h2 class="subtitle has-text-centered">Layer 4 Result</h2>
       </div>
 
       <div class="item item-layer3">
-        <img src="warped_0000_Layer-3.png" alt="Layer 3 Reconstruction">
+        <img src="./static/images/warped_0000_Layer-3.png" alt="Layer 3 Reconstruction">
         <h2 class="subtitle has-text-centered">Layer 3 Result</h2>
       </div>
 
       <div class="item item-layer2">
-        <img src="warped_0000_Layer-2.png" alt="Layer 2 Reconstruction">
+        <img src="./static/images/warped_0000_Layer-2.png" alt="Layer 2 Reconstruction">
         <h2 class="subtitle has-text-centered">Layer 2 Result</h2>
       </div>
 
       <div class="item item-layer1">
-        <img src="warped_0000_Layer-1.png" alt="Layer 1 Reconstruction">
+        <img src="./static/images/warped_0000_Layer-1.png" alt="Layer 1 Reconstruction">
         <h2 class="subtitle has-text-centered">Layer 1 Result</h2>
       </div>
 
