--- a/index.html
+++ b/index.html
@@ -157,7 +157,10 @@
 
 <section class="section">
   <div class="container is-max-desktop">
-    <div id="results-carousel" class="carousel results-carousel">
+    <div id="results-carousel" 
+     class="carousel results-carousel" 
+     data-slides-to-show="2" 
+     data-slides-to-scroll="1">
       
       <div class="item item-layer4">
         <img src="./static/images/changesim_0000_Layer-4.png" alt="Layer 4 Reconstruction">
