--- a/index.html
+++ b/index.html
@@ -159,8 +159,7 @@
   <div class="container is-max-desktop">
     <div id="results-carousel" 
      class="carousel results-carousel" 
-     data-slides-to-show="1" 
-     data-slides-to-scroll="1">
+     data-slides-to-show="1">
       
       <div class="item item-layer4">
         <img src="./static/images/changesim_0000_Layer-4.png" alt="Layer 4 Reconstruction">
@@ -210,8 +209,7 @@
   <div class="container is-max-desktop">
     <div id="results-carousel"
       class="carousel results-carousel"      
-      data-slides-to-show="1" 
-     data-slides-to-scroll="1">
+      data-slides-to-show="1">
       
       <div class="item item-layer4">
         <img src="./static/images/warped_0000_Layer-4.png" alt="Layer 4 Reconstruction">
