--- a/index.html
+++ b/index.html
@@ -164,15 +164,13 @@
         <div class="content has-text-justified">
           <p>
             We evaluate our method across a diverse set of datasets including both real and simulated environments, 
-            indoor and outdoor scenes, and various types of change. Our results provide color-coded labels 
+            indoor and outdoor scenes, and the types of changes they contain: target changes, which correspond 
+            to the object-level modifications we aim to detect, and non-target changes, which arise from 
+            imaging conditions such as illumination, weather, or seasonal variation.. Our results provide color-coded labels 
     (<span style="color: rgb(0, 141, 199); font-weight: 600;">Added</span>, 
      <span style="color: rgb(254, 98, 101); font-weight: 600;">Removed</span>, 
      <span style="color: rgb(67, 170, 139); font-weight: 600;">Moved</span>, 
      <span style="color: rgb(135, 115, 203); font-weight: 600;">Replaced</span>) even with binary GT and can exceed its accuracy, as annotations are often coarse or miss small changes.
-            These datasets differ in image alignment, 
-            annotation granularity, and in the types of changes they contain: target changes, which correspond 
-            to the object-level modifications we aim to detect, and non-target changes, which arise from 
-            imaging conditions such as illumination, weather, or seasonal variation.
           </p>
         </div>
       </div>
