--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            We propose GOLDILOCS: a novel zero-shot, pose-agnostic method for object-level
+            We propose GOLDILOCS: a novel zero-shot, pose-agnostic method for object-levell
             semantic change detection in the wild. While supervised Scene Change Detection
             (SCD) methods achieve impressive results on curated datasets, these models do
             not generalize and performance drops on out-of-domain data. Recent Zero-Shot
