--- a/index.html
+++ b/index.html
@@ -213,9 +213,10 @@
     
 <section class="section">
   <div class="container is-max-desktop">
-    <div id="results-carousel"
-      class="carousel results-carousel"      
-      data-slides-to-show="1">
+    <div id="results-carousel" 
+     class="carousel results-carousel" 
+     style="border: none; box-shadow: none; background: none;" 
+     data-slides-to-show="1">
       
       <div class="item item-layer4">
         <img src="./static/images/warped_0000_Layer-4-new.png" alt="Layer 4 Reconstruction">
