--- a/index.html
+++ b/index.html
@@ -214,28 +214,24 @@
 <section class="section">
   <div class="container is-max-desktop">
     <div id="results-carousel" 
-     class="carousel results-carousel" 
-     style="border: none; box-shadow: none; background: none;" 
-     data-slides-to-show="1">
+         class="carousel results-carousel" 
+         style="border: none; box-shadow: none; background: none; outline: none;" 
+         data-slides-to-show="1">
       
-      <div class="item item-layer4">
+      <div class="item item-layer4" style="border: none; box-shadow: none;">
         <img src="./static/images/warped_0000_Layer-4-new.png" alt="Layer 4 Reconstruction">
-        <!-- <h2 class="subtitle has-text-centered">Layer 4 Result</h2> -->
       </div>
 
-      <div class="item item-layer3">
+      <div class="item item-layer3" style="border: none; box-shadow: none;">
         <img src="./static/images/warped_0001_Layer-3.png" alt="Layer 3 Reconstruction">
-        <!-- <h2 class="subtitle has-text-centered">Layer 3 Result</h2> -->
       </div>
 
-      <div class="item item-layer2">
+      <div class="item item-layer2" style="border: none; box-shadow: none;">
         <img src="./static/images/warped_0002_Layer-2.png" alt="Layer 2 Reconstruction">
-        <!-- <h2 class="subtitle has-text-centered">Layer 2 Result</h2> -->
       </div>
 
-      <div class="item item-layer1">
+      <div class="item item-layer1" style="border: none; box-shadow: none;">
         <img src="./static/images/warped_0003_Layer-1.png" alt="Layer 1 Reconstruction">
-        <!-- <h2 class="subtitle has-text-centered">Layer 1 Result</h2> -->
       </div>
 
     </div>
