--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     
     <div class="content has-text-justified">
       <p>
-        We present results for cases where objects have remained in place but undergone non-rigid transformations labeled as <span style="color: rgb(249,198,80); font-weight: 600;">Warped</span>, such as creasing, denting, squashing and bending. 
+        We evaluated our method on cases where objects have remained in place but undergone non-rigid transformations such as creasing, denting, squashing and bending, a type of change we label as <span style="color: rgb(249,198,80); font-weight: 600;">Warped</span>. 
         These results demonstrate GOLDILOC's ability to capture subtle shape deformations that do not involve displacement of the object itself. 
         Note that highly textured surfaces, such as the terrazzo tiles visible in the rug example, can give rise to false positive detections.
       </p>
