--- a/index.html
+++ b/index.html
@@ -217,9 +217,9 @@
     
     <div class="content has-text-justified">
       <p>
-        We evaluated our method on cases where objects have remained in place but undergone non-rigid transformations such as creasing, denting, squashing and bending, a type of change we label as <span style="color: rgb(249,198,80); font-weight: 600;">Warped</span>. 
+        We evaluated our method on cases where objects have remained in place but undergone non-rigid transformations - such as creasing, denting, squashing and bending - a type of change we label as <span style="color: rgb(249,198,80); font-weight: 600;">Warped</span>. 
         These results demonstrate GOLDILOC's ability to capture subtle shape deformations that do not involve displacement of the object itself. 
-        Note that highly textured surfaces, such as the terrazzo tiles visible in the rug example, can give rise to false positive detections.
+        Notably, highly textured surfaces (e.g., the terrazzo tiles in the rug scene) represent a remaining challenge, occasionally triggering false positive detections.
       </p>
     </div>
 
