--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     
 <section class="section">
   <div class="container is-max-desktop">
-    
+    <h2 class="title is-3">Non-Rigid Change Detection</h2>
     <div class="content has-text-justified">
       <p>
         We evaluated our method on cases where objects have remained in place but undergone non-rigid transformations - such as creasing, denting, squashing and bending - a type of change we label as <span style="color: rgb(249,198,80); font-weight: 600;">Warped</span>. 
