--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
   <div class="container is-max-desktop">
     
     <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
+      <!-- <div class="column is-four-fifths"> -->
         <h2 class="title is-3">Pairwise Scene Change Detection</h2>
         <div class="content has-text-justified">
           <p>
