--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
 <section class="section">
   <div class="container is-max-desktop">
-    <h2 class="title is-3">Multi-View Scene Change Detection</h2>
+    <h2 class="title is-3">Pairwise Scene Change Detection</h2>
     <div class="content has-text-justified">
       <p>
         We evaluate our method across a diverse set of datasets including both real and simulated environments, 
@@ -227,11 +227,10 @@
       </p>
     </div>
 
-    <div style="padding: 0 50px;"> 
-      <div id="results-carousel" 
-           class="carousel results-carousel" 
-           style="border: none; box-shadow: none; background: none; outline: none;" 
-           data-slides-to-show="1"> 
+    <div id="results-carousel" 
+         class="carousel results-carousel" 
+         style="border: none; box-shadow: none; background: none; outline: none;" 
+         data-slides-to-show="1"> 
         
         <div class="item item-layer4" style="border: none; box-shadow: none;">
           <img src="./static/images/m2m_1.png" alt="Layer 4 Reconstruction">
