--- a/index.html
+++ b/index.html
@@ -205,7 +205,6 @@
 
       <div class="item item-layer1" style="border: none; box-shadow: none;">
         <img src="./static/images/vlcmu_0003_Layer-1.png" alt="Layer 1 Reconstruction">
-      </div>
     </div>
   </div>
 </section>
@@ -331,7 +330,7 @@
   </div>
 </section>
 
-
+<!-- 
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
@@ -342,7 +341,7 @@
   year      = {2021},
 }</code></pre>
   </div>
-</section>
+</section> -->
 
 
 <footer class="footer">
