--- a/index.html
+++ b/index.html
@@ -347,10 +347,10 @@
   <div class="container">
     <div class="content has-text-centered">
       <a class="icon-link"
-         href="./static/videos/nerfies_paper.pdf">
+         href="https://www.linkedin.com/in/mogy/">
         <i class="fas fa-file-pdf"></i>
       </a>
-      <a class="icon-link" href="https://github.com/keunhong" class="external-link" disabled>
+      <a class="icon-link" href="https://www.linkedin.com/in/mogy/" class="external-link" disabled>
         <i class="fab fa-github"></i>
       </a>
     </div>
