--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://www.linkedin.com/in/mogy/"
+                <a href="https://github.com/almogfri/GOLDILOCS"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
@@ -350,7 +350,7 @@
          href="https://www.linkedin.com/in/mogy/">
         <i class="fas fa-file-pdf"></i>
       </a>
-      <a class="icon-link" href="https://www.linkedin.com/in/mogy/" class="external-link" disabled>
+      <a class="icon-link" href="https://github.com/almogfri/GOLDILOCS" class="external-link" disabled>
         <i class="fab fa-github"></i>
       </a>
     </div>
