--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 </section>
     
 
-    <!-- Concurrent Work. -->
+    <!-- <!-- Concurrent Work. -->
     <div class="columns is-centered">
       <div class="column is-full-width">
         <h2 class="title is-3">Related Links</h2>
@@ -327,7 +327,7 @@
     <!--/ Concurrent Work. -->
 
   </div>
-</section>
+</section> -->
 
 <!-- 
 <section class="section" id="BibTeX">
