--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>Reichman University,</span>
+            <span class="author-block"><sup>1</sup>Reichman University</span>
           </div>
 
           <div class="column has-text-centered">
