--- a/index.html
+++ b/index.html
@@ -299,8 +299,8 @@
 </section>
     
 
-    <!-- <!-- Concurrent Work. -->
-    <div class="columns is-centered">
+    <!-- Concurrent Work. -->
+    <!-- <div class="columns is-centered">
       <div class="column is-full-width">
         <h2 class="title is-3">Related Links</h2>
 
